2007-10-16  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/forestfire.c (igraph_forest_fire_game) : forest fire model added

	* src/random.h (RNG_BINOM) : added
	* src/random.c (igraph_rbinom) : added

2007-10-15  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_properties.c (igraph_path_length_hist) : added

	* src/structure_generators.c (igraph_full_citation) : added

2007-10-13  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/revolver_ml_cit.c (igraph_revolver_ml_D, igraph_revolver_ml_D_alpha)
	(igraph_revolver_ml_D_alpha_a, igraph_revolver_d) : add interruption

	* src/revolver_ml_cit.c (igraph_revolver_ml_AD)
	(igraph_revolver_ml_AD_alpha_a_beta) : added

	* src/revolver_ml_cit.c (igraph_revolver_ml_D) : remove 'ptk', not needed

	* src/revolver_ml_cit.c (igraph_revolver_ml_D, igraph_revolver_ml_D_alpha)
	(igraph_revolver_ml_D_alpha_a) : add fncount, grcount arguments	
	
	* src/bfgs.c (igraph_bfgs) : add interruption, change int* arguments
	to igraph_integer_t*	

	* src/matrix.c : add boolean matrices

2007-10-12  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/revolver_ml_cit.c (igraph_revolver_ml_D)
	(igraph_revolver_ml_D_alpha, igraph_revolver_ml_D_alpha_a) : added,
	rewritten
	* src/bfgs.c (igraph_bfgs) : added

	* src/math.c (igraph_finite) : added

	* src/vector.pmt (igraph_vector_update) : added

2007-10-11  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/revolver_ml_cit.c (igraph_revolver_ml_D) 
	(igraph_revolver_ml_D_alpha) : added

	* src/zeroin.c (igraph_zeroin) : added

2007-10-07  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/revolver_ml_cit.c (igraph_revolver_ml_d) : added

2007-10-03  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/evolver_cit.c (igraph_evolver_d) : bug corrected
	* src/revolver_cit.c (igraph_revolver_st_d) : bug corrected

	* src/structural_properties.c (igraph_is_simple) : added

2007-10-02  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/motifs.c (igraph_dyad_census, igraph_triad_census)
	(igraph_triad_census_24) : added
