@@ -4786,6 +4786,8 @@ SEXP R_igraph_read_graph_dimacs(SEXP pvfile, SEXP pdirected) {
   igraph_t g;
   igraph_bool_t directed=LOGICAL(pdirected)[0];
   FILE *file;
+  igraph_vector_t label;
+  igraph_strvector_t problem;
   igraph_integer_t source, target;
   igraph_vector_t cap;
   SEXP result;
@@ -4800,20 +4802,39 @@ SEXP R_igraph_read_graph_dimacs(SEXP pvfile, SEXP pdirected) {
   if (file==0) { igraph_error("Cannot read edgelist", __FILE__, __LINE__,
 			      IGRAPH_EFILE); 
   }
+  igraph_vector_init(&label, 0);
+  igraph_strvector_init(&problem, 0);
   igraph_vector_init(&cap, 0);
-  igraph_read_graph_dimacs(&g, file, &source, &target, &cap, directed);
+  igraph_read_graph_dimacs(&g, file, &problem, &label, 
+			   &source, &target, &cap, directed);
   fclose(file);
-  PROTECT(result=NEW_LIST(4));
-  SET_VECTOR_ELT(result, 0, R_igraph_to_SEXP(&g));
-  SET_VECTOR_ELT(result, 1, NEW_NUMERIC(1));
-  REAL(VECTOR_ELT(result, 1))[0]=source;
-  SET_VECTOR_ELT(result, 2, NEW_NUMERIC(1));
-  REAL(VECTOR_ELT(result, 2))[0]=target;
-  SET_VECTOR_ELT(result, 3, NEW_NUMERIC(igraph_vector_size(&cap)));
-  igraph_vector_copy_to(&cap, REAL(VECTOR_ELT(result,3)));
-  igraph_destroy(&g);
-  igraph_vector_destroy(&cap);
-  
+  if (!strcmp(STR(problem, 0), "max")) {
+    PROTECT(result=NEW_LIST(5));
+    SET_VECTOR_ELT(result, 0, R_igraph_strvector_to_SEXP(&problem));
+    igraph_strvector_destroy(&problem);
+    SET_VECTOR_ELT(result, 1, R_igraph_to_SEXP(&g));
+    igraph_destroy(&g);
+    SET_VECTOR_ELT(result, 2, NEW_NUMERIC(1));
+    REAL(VECTOR_ELT(result, 2))[0]=source;
+    SET_VECTOR_ELT(result, 3, NEW_NUMERIC(1));
+    REAL(VECTOR_ELT(result, 3))[0]=target;
+    SET_VECTOR_ELT(result, 4, NEW_NUMERIC(igraph_vector_size(&cap)));
+    igraph_vector_copy_to(&cap, REAL(VECTOR_ELT(result,4)));
+    igraph_vector_destroy(&cap);
+  } else if (!strcmp(STR(problem, 0), "edge")) {
+    PROTECT(result=NEW_LIST(3));
+    SET_VECTOR_ELT(result, 0, R_igraph_strvector_to_SEXP(&problem));    
+    igraph_strvector_destroy(&problem);
+    SET_VECTOR_ELT(result, 1, R_igraph_to_SEXP(&g));
+    igraph_destroy(&g);
+    SET_VECTOR_ELT(result, 2, R_igraph_vector_to_SEXP(&label));
+    igraph_vector_destroy(&label);
+  } else {
+    /* This shouldn't happen */
+    igraph_error("Invalid DIMACS file (problem) type", __FILE__, __LINE__,
+		 IGRAPH_PARSEERROR);
+  }
+
   R_igraph_after();
   
   UNPROTECT(1);
